Fix: align to the center vertically and hozniotally

--- a/web/app/themes/laravel-theme-child/resources/assets/styles/flexible/common/_main.scss
+++ b/web/app/themes/laravel-theme-child/resources/assets/styles/flexible/common/_main.scss
@@ -97,7 +97,7 @@
   display: flex;
 
   > div {
-    margin: auto 0;
+    margin: auto;
   }
 }
 
